k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-service
  namespace: resilience-demo

spec:
  selector:
    app: sample-app

  ports:
  - port: 80
    targetPort: 5000

  type: NodePort
